# LoopieEngine

./: .gitignore  CMakeLists.txt  cpp.hint  vcpkg.json
LoopieEditor/: CMakeLists.txt
LoopieEditor/assets/: imgui.ini  imgui.ini.metacache  shaders.metacache  textures.metacache
LoopieEditor/assets/icons/: icon_collisions.png.metacache  icon_file.png.metacache  icon_folder.png.metacache  icon_folderFill.png.metacache  icon_grid.png.metacache  icon_move.png.metacache  icon_nextFrame.png.metacache  icon_octree.png.metacache  icon_pause.png.metacache  icon_play.png.metacache  icon_rotate.png.metacache  icon_scale.png.metacache  icon_snap.png.metacache  icon_stop.png.metacache  icon_trs.png.metacache
LoopieEditor/assets/logo/: logo.bmp.metacache
LoopieEditor/assets/materials/: ParticleMaterial.mat  ParticleMaterial.mat.metacache  defaultMaterial.mat  defaultMaterial.mat.metacache  outlineMaterial.mat.metacache  ui_default.mat.metacache
LoopieEditor/assets/models/Primitives/: cube.fbx.metacache  cylinder.fbx.metacache  plane.fbx.metacache  sphere.fbx.metacache
LoopieEditor/assets/scenes/: DefaultScene.scene.metacache
LoopieEditor/assets/scripts/: DefaultScript.cs  DefaultScript.cs.metacache
LoopieEditor/assets/shaders/: DefaultShader.shader  DefaultShader.shader.metacache  LavaShader.shader.metacache  LineShader.shader.metacache  ParticleShader.shader  ParticleShader.shader.metacache  SelectionOutline.shader.metacache  ShadowDepth.shader  ShadowDepth.shader.metacache  UIQuad.shader  UIQuad.shader.metacache  WaterShader.shader.metacache
LoopieEditor/assets/textures/: DefaultNormalTexture.png.metacache  simpleWhiteTexture.png.metacache
LoopieEditor/src/Editor/: EditorApplication.cpp
LoopieEditor/src/Editor/Interfaces/Workspace/: EditorMenuInterface.h  (+13 more)
LoopieEditor/src/Editor/Modules/: EditorModule.cpp  EditorModule.h
LoopieEditor/src/Editor/Others/: OrbitalCamera.cpp  OrbitalCamera.h
(+266 files in other folders)
